--- a/about.html
+++ b/about.html
@@ -66,21 +66,16 @@
                     <div class="main-menu">
                         <ul class="nav navbar-nav navbar-right">
                             <li>
-                                <a href="index.html" >Home</a>
+                                <a href="index.html">Home</a>
+                            </li>                            
+                            <li><a href="service.html">MyBooks</a></li>
+                            <li>
+                                <a href="#">wishlist</a>
+                            
                             </li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="service.html">Service</a></li>
+                            <li><a href="#">sell</a></li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <span class="caret"></span></a>
-                                <div class="dropdown-menu">
-                                    <ul>
-                                        <li><a href="404.html">404 Page</a></li>
-                                        <li><a href="gallery.html">Gallery</a></li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <span class="caret"></span></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">categories <span class="caret"></span></a>
                                 <div class="dropdown-menu">
                                     <ul>
                                         <li><a href="blog-fullwidth.html">Blog Full</a></li>
@@ -89,6 +84,8 @@
                                     </ul>
                                 </div>
                             </li>
+                            </li>
+                            <li><a href="about.html">About</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
