--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <!-- template main css file 
         <link rel="stylesheet" href="css/style.css">-->
         <link rel="stylesheet" type="text/css" href="css/main.css">
+
+        <link rel="stylesheet" href="css/myStyle.css">
     </head>
     <body>
 
@@ -68,9 +70,8 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li>
                                 <a href="index.html" >Home</a>
-                            </li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="service.html">MyBooks</a></li>
+                            </li>                            
+                            <li><a href="service.html">My Books</a></li>
                             <li >
                                 <a href="#">wishlist</a>
                     
@@ -86,6 +87,7 @@
                                     </ul>
                                 </div>
                             </li>
+                            <li><a href="about.html">About</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
@@ -271,7 +273,7 @@ Portfolio Section Start
                                 <a href="http://wwww.fb.com/themefisher" class="Facebook">
                                     <i class="ion-social-facebook"></i>
                                 </a>
-                            </li>s
+                            </li>
                             <li>
                                 <a href="http://wwww.twitter.com/themefisher" class="Twitter">
                                     <i class="ion-social-twitter"></i>
