--- a/service.html
+++ b/service.html
@@ -33,6 +33,8 @@
         <link rel="stylesheet" href="plugins/facncybox/jquery.fancybox.css">
         <!-- template main css file -->
         <link rel="stylesheet" href="css/style.css">
+
+        <link rel="stylesheet" href="css/myStyle.css">
     </head>
     <body>
 
@@ -67,20 +69,15 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li>
                                 <a href="index.html" >Home</a>
+                            </li>                            
+                            <li><a href="service.html">My Books</a></li>
+                            <li >
+                                <a href="#">wishlist</a>
+                    
                             </li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="service.html">Service</a></li>
+                               <li><a href="#">sell</a></li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <span class="caret"></span></a>
-                                <div class="dropdown-menu">
-                                    <ul>
-                                        <li><a href="404.html">404 Page</a></li>
-                                        <li><a href="gallery.html">Gallery</a></li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <span class="caret"></span></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Categories <span class="caret"></span></a>
                                 <div class="dropdown-menu">
                                     <ul>
                                         <li><a href="blog-fullwidth.html">Blog Full</a></li>
@@ -88,7 +85,9 @@
                                         <li><a href="blog-right-sidebar.html">Blog Right sidebar</a></li>
                                     </ul>
                                 </div>
+                            </li>                        
                             </li>
+                            <li><a href="about.html">About</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
@@ -107,7 +106,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="block">
-                            <h2>Service</h2>
+                            <h2>My Books</h2>
                             <ol class="breadcrumb">
                                 <li>
                                     <a href="index.html">
@@ -129,12 +128,46 @@
     Service Page Section  Start
 ================================================== -->
 <section id="service-page" class="pages service-page">
+    <p class="subtitle-des wow fadeInUp animated" data-wow-delay=".5s" data-wow-duration="500ms" style="margin-left: 10%; font-size:18px;">The books below are visible and available for all users to rent or buy.</p>
     <div class="container">
         <div class="row">
             <div class="col-md-6">
                 <div class="block">
-                    <h2 class="subtitle wow fadeInUp animated" data-wow-delay=".3s" data-wow-duration="500ms">What We Love To Do</h2>
-                    <p class="subtitle-des wow fadeInUp animated" data-wow-delay=".5s" data-wow-duration="500ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis porro recusandae non quibusdam iure adipisci.</p>
+                    <div class="row service-parts">
+                        <div class="col-md-6">
+                            <div class="book block wow fadeInUp animated" data-wow-duration="400ms" data-wow-delay="600ms">
+                                <img src="images/books/Lord-of-the-Rings-by-JRR-Tolkien-541x700.jpg" alt="Lord of The Rings">
+                                <h4>The Lord of the Rings</h4>
+                                <p>The Lord of the Rings is an epic high fantasy novel written by English author and scholar J. R. R. Tolkien. The story began as a sequel to Tolkien's 1937 fantasy novel The Hobbit, but eventually developed into a much larger work.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="block wow fadeInUp animated" data-wow-duration="400ms" data-wow-delay="800ms">
+                                <i class="ion-ios-pint-outline"></i>
+                                <h4>DESIGN</h4>
+                                <p>Veritatis eligendi, dignissimos. Porta fermentum mus aute pulvinar earum minus platea massa feugiat rutrum urna facilisi ipsameum.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="block wow fadeInUp animated" data-wow-duration="400ms" data-wow-delay="1s">
+                                <i class="ion-ios-paper-outline"></i>
+                                <h4>DEVELOPMENT</h4>
+                                <p>Veritatis eligendi, dignissimos. Porta fermentum mus aute pulvinar earum minus platea massa feugiat rutrum urna facilisi ipsameum.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="block wow fadeInUp animated" data-wow-duration="400ms" data-wow-delay="1.1s">
+                                <i class="ion-ios-paper-outline"></i>
+                                <h4>THEMEING</h4>
+                                <p>Veritatis eligendi, dignissimos. Porta fermentum mus aute pulvinar earum minus platea massa feugiat rutrum urna facilisi ipsameum.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+            <div class="col-md-6">
+                <div class="block">
                     <div class="row service-parts">
                         <div class="col-md-6">
                             <div class="block wow fadeInUp animated" data-wow-duration="400ms" data-wow-delay="600ms">
@@ -165,11 +198,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="block">
-                    <img class="img-responsive" src="images/team.jpg" alt="">
                 </div>
             </div>
         </div>
