--- a/MyBooks.html
+++ b/MyBooks.html
@@ -70,22 +70,15 @@
                             <li>
                                 <a href="index.html" >Home</a>
                             </li>                            
-                            <li><a href="service.html">My Books</a></li>
+                            <li><a href="mybooks.html">My Books</a></li>
                             <li >
-                                <a href="#">wishlist</a>
+                                <a href="#">Wishlist</a>
                     
                             </li>
                                <li><a href="#">sell</a></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Categories <span class="caret"></span></a>
-                                <div class="dropdown-menu">
-                                    <ul>
-                                        <li><a href="blog-fullwidth.html">Blog Full</a></li>
-                                        <li><a href="blog-left-sidebar.html">Blog Left sidebar</a></li>
-                                        <li><a href="blog-right-sidebar.html">Blog Right sidebar</a></li>
-                                    </ul>
-                                </div>
-                            </li>                        
+                            <li>
+                                <a href = 'categories.html'>Categories</a>
+                            </li>                     
                             </li>
                             <li><a href="about.html">About</a></li>
                             <li><a href="contact.html">Contact</a></li>
@@ -107,15 +100,6 @@
                     <div class="col-md-12">
                         <div class="block">
                             <h2>My Books</h2>
-                            <ol class="breadcrumb">
-                                <li>
-                                    <a href="index.html">
-                                        <i class="ion-ios-home"></i>
-                                        Home
-                                    </a>
-                                </li>
-                                <li class="active">Service</li>
-                            </ol>
                         </div>
                     </div>
                 </div>
@@ -138,14 +122,12 @@
                             <div class="book block wow fadeInUp animated" data-wow-duration="400ms" data-wow-delay="600ms">
                                 <img src="images/books/Lord-of-the-Rings-by-JRR-Tolkien-541x700.jpg" alt="Lord of The Rings">
                                 <h4>The Lord of the Rings</h4>
-                                <p>The Lord of the Rings is an epic high fantasy novel written by English author and scholar J. R. R. Tolkien. The story began as a sequel to Tolkien's 1937 fantasy novel The Hobbit, but eventually developed into a much larger work.</p>
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="block wow fadeInUp animated" data-wow-duration="400ms" data-wow-delay="800ms">
-                                <i class="ion-ios-pint-outline"></i>
-                                <h4>DESIGN</h4>
-                                <p>Veritatis eligendi, dignissimos. Porta fermentum mus aute pulvinar earum minus platea massa feugiat rutrum urna facilisi ipsameum.</p>
+                            <div class="book block wow fadeInUp animated" data-wow-duration="400ms" data-wow-delay="800ms">
+                                <img src="images/books/02-the-girlfriend-1513169277.jpg" alt="Lord of The Rings">
+                                <h4>The Girlfriend</h4>
                             </div>
                         </div>
                         <div class="col-md-6">
