--- a/categories.html
+++ b/categories.html
@@ -47,6 +47,7 @@
         <header id="top-bar" class="navbar-fixed-top animated-header">
             <div class="container">
                 <div class="navbar-header">
+
                     <!-- responsive nav button -->
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
@@ -66,33 +67,35 @@
                 </div>
                 <!-- main menu -->
                 <nav class="collapse navbar-collapse navbar-right" role="navigation">
+
+
+
+
                     <div class="main-menu">
                         <ul class="nav navbar-nav navbar-right">
+                 <!-- Search form -->
+             <li>
+              <input type="search" class="form-control" placeholder="search..">
+        
+              </li>
                             <li>
                                 <a href="index.html" >Home</a>
+                            </li>                            
+                            <li><a href="MyBooks.html">My Books</a></li>
+                            <li >
+                                <a href="#">wishlist</a>
+                            </li>
+                            <li>
+                                <a href = 'categories.html'>Categories</a>
                             </li>
                             <li><a href="about.html">About</a></li>
-                            <li><a href="service.html">Service</a></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <span class="caret"></span></a>
-                                <div class="dropdown-menu">
-                                    <ul>
-                                        <li><a href="404.html">404 Page</a></li>
-                                        <li><a href="gallery.html">Gallery</a></li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <span class="caret"></span></a>
-                                <div class="dropdown-menu">
-                                    <ul>
-                                        <li><a href="blog-fullwidth.html">Blog Full</a></li>
-                                        <li><a href="blog-left-sidebar.html">Blog Left sidebar</a></li>
-                                        <li><a href="blog-right-sidebar.html">Blog Right sidebar</a></li>
-                                    </ul>
-                                </div>
-                            </li>
                             <li><a href="contact.html">Contact</a></li>
+
+                                                            <li >
+                                <a id ="signin"class ="btn btn-lg" href="#">Signin</a>
+                    
+                            </li>
+
                         </ul>
                     </div>
                 </nav>
