--- a/MyBooks.html
+++ b/MyBooks.html
@@ -5,7 +5,7 @@
         ================================================== -->
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="books.png">
         <title>Timer Agency Template</title>
         <meta name="description" content="">
         <meta name="keywords" content="">
@@ -57,9 +57,9 @@
                     <!-- /responsive nav button -->
                     
                     <!-- logo -->
-                    <div class="navbar-brand">
+                    <div style="width: 280px;  margin-bottom: 3%;" class="navbar-brand">
                         <a href="index.html" >
-                            <img src="images/logo.png" alt="">
+                            <img style="width: 100%;" src="images/logo/201846872018-02-273871051Pencil-Book.png" alt="">
                         </a>
                     </div>
                     <!-- /logo -->
