--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
     <!-- template main css file 
         <link rel="stylesheet" href="css/style.css">-->
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/myStyle.css" />
   </head>
   <body>
@@ -222,7 +221,7 @@ Portfolio Section Start
           </h1>
         </div>
         <div class="row">
-          <div class="col-sm-3 col-xs-12">
+          <div class="col-lg-2 col-sm-3 col-xs-12">
             <figure
               class="wow fadeInLeft animated portfolio-item"
               data-wow-duration="500ms"
@@ -243,7 +242,7 @@ Portfolio Section Start
             </figure>
           </div>
 
-          <div class="col-sm-3 col-xs-12">
+          <div class="col-lg-2 col-sm-3 col-xs-12">
             <figure
               class="wow fadeInLeft animated"
               data-wow-duration="500ms"
@@ -263,7 +262,7 @@ Portfolio Section Start
               </div>
             </figure>
           </div>
-          <div class="col-sm-3 col-xs-12">
+          <div class="col-lg-2 col-sm-3 col-xs-12">
             <figure
               class="wow fadeInLeft animated"
               data-wow-duration="500ms"
@@ -283,7 +282,7 @@ Portfolio Section Start
               </div>
             </figure>
           </div>
-          <div class="col-sm-3 col-xs-12">
+          <div class="col-lg-2 col-sm-3 col-xs-12">
             <figure
               class="wow fadeInLeft animated"
               data-wow-duration="500ms"
@@ -303,7 +302,7 @@ Portfolio Section Start
               </div>
             </figure>
           </div>
-          <div class="col-sm-3 col-xs-12">
+          <div class="col-lg-2 col-sm-3 col-xs-12">
             <figure
               class="wow fadeInLeft animated"
               data-wow-duration="500ms"
@@ -323,7 +322,7 @@ Portfolio Section Start
               </div>
             </figure>
           </div>
-          <div class="col-sm-3 col-xs-12">
+          <div class="col-lg-2 col-sm-3 col-xs-12">
             <figure
               class="wow fadeInLeft animated"
               data-wow-duration="500ms"
