--- a/index.html
+++ b/index.html
@@ -34,12 +34,20 @@
         <link rel="stylesheet" href="css/style.css">-->
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <link rel="stylesheet" href="css/myStyle.css" />
+
+    <!-- template login css file -->
+        
+    <link rel="stylesheet" type="text/css" href="css/login.css" />
   </head>
   <body>
     <!--
         ==================================================
         Pop-up Window  Start
+
+        
         ================================================== -->
+
+
     <div id="id01" class="modal">
       <form id="modal-contenid" class="modal-content animate" action="/action_page.php">
         <div class="imgcontainer">
@@ -156,6 +164,7 @@
                   id="signin"
                   class="btn btn-lg"
                   onclick="document.getElementById('id01').style.display='block'"
+                  href="login_signup.html"
                   >Signin</a
                 >
               </li>
