another heart for bassam

--- a/MyBooks.html
+++ b/MyBooks.html
@@ -5,17 +5,24 @@
 
   <style>
     .heart {
-      width: 100px;
-      height: 100px;
-      position: absolute;
-      left: 50%;
-      top: 50%;
+
+      width: 76px;
+      height: 76px;
+      position: relative;
+      float: right;
+      margin-top: 10px;
+      margin-left: 35px;
+      margin-right: 0;
       transform: translate(-50%, -50%);
       background: url('images/heart.png') no-repeat;
       cursor: pointer;
 
+
+
     }
   </style>
+
+
 
 
 
@@ -250,7 +257,9 @@
     Selling Container
 ================================================== -->
 
+
     <div class="container">
+
 
 
       <button style="width:10%;" onclick="document.getElementById('addBook').style.display='block'">
@@ -279,17 +288,34 @@
               <img src="images/portfolio/item-1.jpg" class="img-responsive" alt="this is a title" />
               <div class="mybooks-overlay">
                 <div class="desc">
+                  <div class="description">
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text ever since the 1500s, when an unknown
+                    printer took a galley of type and scrambled it to make a
+                    type specimen book. It has survived not only five
+                    centuries, but also the leap into electronic typesetting,
+                    remaining essentially unchanged. It was popularised in the
+                    1960s with the release of Letraset sheets containing Lorem
+                    Ipsum passages, and more recently with desktop publishing
+                    software like Aldus PageMaker including versions of Lorem
+                    Ipsum.
+                  </div>
 
-
-                  <div class="heart"></div>
                   <a class="details" target="_blank" href="#">Learn More</a>
+
                 </div>
               </div>
             </div>
             <figcaption>
               <span>
-                <label>Price : </label>
-                <label class="price">20.00$</label></span>
+
+                <label class="price">20.00$</label> </span>
+              <div class="heart"></div>
+
+
+
+
             </figcaption>
           </figure>
         </div>
@@ -320,8 +346,10 @@
             </div>
             <figcaption>
               <span>
-                <label>Price : </label>
-                <label class="price">20.00$</label></span>
+
+                <label class="price">20.00$</label> </span>
+              <div class="heart"></div>
+
             </figcaption>
           </figure>
         </div>
@@ -352,8 +380,10 @@
             </div>
             <figcaption>
               <span>
-                <label>Price : </label>
-                <label class="price">20.00$</label></span>
+
+                <label class="price">20.00$</label> </span>
+              <div class="heart"></div>
+
             </figcaption>
           </figure>
         </div>
@@ -384,8 +414,10 @@
             </div>
             <figcaption>
               <span>
-                <label>Price : </label>
-                <label class="price">20.00$</label></span>
+
+                <label class="price">20.00$</label> </span>
+              <div class="heart"></div>
+
             </figcaption>
           </figure>
         </div>
