Revert "Merge branch 'master' of https://github.com/hamzasdr/Web-project"
This reverts commit 4f17a5a10dbf7d219a93001232e2c3ecab28c941, reversing
changes made to 9f3759840cdc34be156cba4da88d31930a6c1a4a.

--- a/MyBooks.html
+++ b/MyBooks.html
@@ -1,32 +1,20 @@
 <!DOCTYPE html>
 <html class="no-js">
+  <head>
+    <style>
+      .heart {
+        width: 100px;
+        height: 100px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        background: url("images/heart.png") no-repeat;
+        cursor: pointer;
+      }
+    </style>
 
-<head>
-
-  <style>
-    .heart {
-
-      width: 76px;
-      height: 76px;
-      position: relative;
-      float: right;
-      margin-top: 10px;
-      margin-left: 35px;
-      margin-right: 0;
-      transform: translate(-50%, -50%);
-      background: url('images/heart.png') no-repeat;
-      cursor: pointer;
-
-
-
-    }
-  </style>
-
-
-
-
-
-  <!-- Basic Page Needs
+    <!-- Basic Page Needs
         ================================================== -->
     <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -542,10 +530,8 @@
             </div>
             <figcaption>
               <span>
-
-                <label class="price">20.00$</label> </span>
-              <div class="heart"></div>
-
+                <label>Price : </label>
+                <label class="price">20.00$</label></span>
             </figcaption>
           </figure>
         </div>
@@ -579,6 +565,16 @@
         >
           your list for selling
         </h2>
+
+        <br />
+
+        <p
+          class="subtitle-des wow fadeInUp animated"
+          data-wow-delay=".5s"
+          data-wow-duration="500ms"
+        >
+          total : ?
+        </p>
 
         <br />
 
