--- a/MyBooks.html
+++ b/MyBooks.html
@@ -160,28 +160,37 @@
         </div>
         <!-- /logo -->
       </div>
-      <!-- main menu -->
-      <nav class="collapse navbar-collapse navbar-right" role="navigation">
+     <!-- main menu -->
+     <nav class="collapse navbar-collapse navbar-right" role="navigation">
         <div class="main-menu">
           <ul class="nav navbar-nav navbar-right">
             <!-- Search form -->
             <li>
-              <input type="search" class="form-control" placeholder="search.." />
+              <input
+                type="search"
+                class="form-control"
+                placeholder="search.."
+              />
             </li>
             <li>
               <a href="index.html">Home</a>
             </li>
             <li><a href="MyBooks.html">My Books</a></li>
-
+           
             <li>
-              <a href="categories.html">Categories</a>
+              <a href="browse.html">Store</a>
             </li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
 
             <li>
-              <a id="signin" class="btn btn-lg"
-                onclick="document.getElementById('id01').style.display='block'">Signin</a>
+              <a
+                id="signin"
+                class="btn btn-lg"
+                onclick="document.getElementById('id01').style.display='block'"
+               
+                >Signin</a
+              >
             </li>
           </ul>
         </div>
