--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               <li><a href="MyBooks.html">My Books</a></li>
              
               <li>
-                <a href="categories.html">Categories</a>
+                <a href="browse.html">Store</a>
               </li>
               <li><a href="about.html">About</a></li>
               <li><a href="contact.html">Contact</a></li>
