--- a/MyBooks.html
+++ b/MyBooks.html
@@ -182,7 +182,7 @@
 
           <!-- logo -->
           <div style="width: 280px;  margin-bottom: 3%;" class="navbar-brand">
-            <a href="index.html">
+            <a href="index.php">
               <img
                 style="width: 100%;"
                 src="images/logo/201846872018-02-273871051Pencil-Book.png"
@@ -205,7 +205,7 @@
                 />
               </li>
               <li>
-                <a href="index.html">Home</a>
+                <a href="index.php">Home</a>
               </li>
               <li><a href="MyBooks.html">My Books</a></li>
 
