--- a/MyBooks.html
+++ b/MyBooks.html
@@ -369,6 +369,7 @@
                   id="submit"
                   class="form-submit"
                   value="Submit"
+                  style="width:40%;"
                 />
                 <input
                   type="reset"
@@ -376,7 +377,7 @@
                   id="submit"
                   class="form-submit"
                   value="cancel"
-                  style="background:crimson; margin-right:50px;"
+                  style="background:crimson; margin-right:50px; width: 20%;"
                   onclick="document.getElementById('addBook').style.display='none';"
                 />
               </div>
@@ -440,7 +441,7 @@
                     software like Aldus PageMaker including versions of Lorem
                     Ipsum.
                   </div>
-                  <a class="details" target="_blank" href="#">Learn More</a>
+                  <a class="details" target="_blank" href="bookdetails.php">Learn More</a>
                 </div>
               </div>
             </div>
