--- a/browse.html
+++ b/browse.html
@@ -292,7 +292,7 @@
                                             software like Aldus PageMaker including versions of Lorem
                                             Ipsum.
                                           </div>
-                                          <a class="details" target="_blank" href="#">Learn More</a>
+                                          <a class="details" target="_blank" href="bookdetails.html">Learn More</a>
                                         </div>
                                       </div>
                                     </div>
