--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@ Slider Section Start
                 data-wow-delay=".9s"
                 href="#works"
                 data-section="#works"
+                style = "background:#f44336"
                 >Signup</a
               >
             </div>
