--- a/profile.html
+++ b/profile.html
@@ -44,64 +44,64 @@
         ==================================================
         Header Section Start
         ================================================== -->
-  <header id="top-bar" class="navbar-fixed-top animated-header">
-    <div class="container">
-      <div class="navbar-header">
-        <!-- responsive nav button -->
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <!-- /responsive nav button -->
-
-        <!-- logo -->
-        <div style="width: 280px;  margin-bottom: 3%;" class="navbar-brand">
-          <a href="index.php">
-            <img style="width: 100%;" src="images/logo/201846872018-02-273871051Pencil-Book.png" alt="" />
-          </a>
-        </div>
-        <!-- /logo -->
-      </div>
-      <!-- main menu -->
-      <nav class="collapse navbar-collapse navbar-right" role="navigation">
-        <div class="main-menu">
-          <ul class="nav navbar-nav navbar-right" style="width:800px;">
-            <!-- Search form -->
-            <li>
-              <input type="search" class="form-control" placeholder="search.." style="width: 90%;" />
-            </li>
-            <li>
-              <a href="index.php">Home</a>
-            </li>
-            <li><a href="MyBooks.php">My Books</a></li>
-
-            <li>
-              <a href="browse.php">Store</a>
-            </li>
-            <li><a href="about.php">About</a></li>
-            <li><a href="contact.php">Contact</a></li>
-
-            <li style="width: 20%; border: none;" class="dropdown">
-              <a style="margin-left: 10px;" href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <?php
-                echo $_SESSION['username'];
-                ?>
-                <span class="glyphicon glyphicon-user pull-right"></span></a>
-              <ul style="width:200px;" class="dropdown-menu">
-                <li><a href="profile.php">Account Settings<span class="glyphicon glyphicon-cog pull-right"></span></a>
-                </li>
-                <li class="divider"></li>
-
-                <li><a href="index.php?logout='1'">Sign Out<span class="glyphicon glyphicon-log-out pull-right"></span></a></li>
-              </ul>
-            </li>
-        </div>
-      </nav>
-      <!-- /main nav -->
-    </div>
-  </header>
+        <header id="top-bar" class="navbar-fixed-top animated-header">
+          <div class="container">
+              <div class="navbar-header">
+                  <!-- responsive nav button -->
+                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                      <span class="sr-only">Toggle navigation</span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                  </button>
+                  <!-- /responsive nav button -->
+  
+                  <!-- logo -->
+                  <div style="width: 280px;  margin-bottom: 3%;" class="navbar-brand">
+                      <a href="index.php">
+                          <img style="width: 100%;" src="images/logo/201846872018-02-273871051Pencil-Book.png" alt="" />
+                      </a>
+                  </div>
+                  <!-- /logo -->
+              </div>
+              <!-- main menu -->
+              <nav class="collapse navbar-collapse navbar-right" role="navigation">
+                  <div class="main-menu">
+                      <ul class="nav navbar-nav navbar-right" style="width:1300px; margin-right: -370px;">
+                          <!-- Search form -->
+                          <li>
+                              <input type="search" class="form-control" placeholder="search.." style="width: 500px; margin-right:100px;" />
+                            </li>
+                          <li>
+                              <a href="index.php">Home</a>
+                          </li>
+                          <li><a href="MyBooks.php">My Books</a></li>
+  
+                          <li>
+                              <a href="browse.php">Store</a>
+                          </li>
+                       
+                          <li style="width: 10%; border: none;" class="dropdown">
+                              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                  <?php
+                                  echo $_SESSION['username'];
+                                  ?>
+                                  <span class="glyphicon glyphicon-user pull-right"></span></a>
+                              <ul style="width:200px;" class="dropdown-menu">
+                                  <li><a href="profile.php">Account Settings <span class="glyphicon glyphicon-cog pull-right"></span></a></li>
+                                  <li class="divider"></li>
+  
+                                  <li><a href="index.php?logout='1'">Sign Out <span class=" glyphicon glyphicon-log-out pull-right"></span></a></li>
+                              </ul>
+                          </li>
+                      </ul>
+                  </div>
+              </nav>
+              <!-- /main nav -->
+          </div>
+      </header>
+  
+      
 
 
 
