--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <link rel="stylesheet" href="css/style.css">-->
   <link rel="stylesheet" type="text/css" href="css/main.css" />
   <link rel="stylesheet" type="text/css" href="css/login.css" />
+  <link rel="stylesheet" type="text/css" href="css/mystyle.css" />
   <script>
     function signUpValidation() {
       var username = document.forms["signupForm"]["username"].value;
@@ -166,7 +167,7 @@
       <!-- main menu -->
       <nav class="collapse navbar-collapse navbar-right" role="navigation">
         <div class="main-menu">
-          <ul class="nav navbar-nav navbar-right" style="width:1200px; margin-right: -70px;">
+          <ul class="nav navbar-nav navbar-right" style="width:1200px; margin-right: -250px;">
             <!-- Search form -->
             <li>
               <input type="search" class="form-control" placeholder="search.." style="width: 500px; margin-right:200px;" />
@@ -174,12 +175,11 @@
             <li>
               <a href="index.html">Home</a>
             </li>
-            <li><a href="MyBooks.html">My Books</a></li>
-
+         
             <li>
               <a href="browse.html">Store</a>
             </li>
-            <li><a href="about.html">About</a></li>
+         
             <li><a href="contact.html">Contact</a></li>
 
             <li>
@@ -232,18 +232,18 @@ Slider Section Start
 ==================================================
 Portfolio Section Start
 ================================================== -->
-  <section id="works" class="works" style = "margin-top : 300px; margin-bottom:100px;">
-    <div class="container ">
+  <section id="works" class="works" style = "margin-top : 30%; margin-bottom:10%; margin-left :15% ; margin-right :15%;">
+    <div class="container"> 
       <div class="section-heading">
         <h1 class="title wow fadeInDown" data-wow-delay=".3s">
           Browse Categories
         </h1>
       </div>
       <div class="row">
-        <div class="col-lg-2 col-sm-3 col-xs-12">
-          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="0ms">
-            <div class="img-wrapper">
-              <img src="images/portfolio/item-1.jpg" class="img-responsive" alt="this is a title" />
+        <div class="col-md-3 col-sm-4 col-xs-12" >
+          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="300ms">
+            <div class="img-wrapper" style = "box-shadow: 0px 10px 12px grey;">
+              <img src="D:\Web-project\images\categories\adventure.jpg" class="img-responsive" alt="this is a title" style = "width : 450px ; height :185px; " />
               <a target="_blank" href="single-portfolio.html">
                 <div class="overlay">
                   <span class="slide"> action & adventure</span>
@@ -253,11 +253,11 @@ Portfolio Section Start
           </figure>
         </div>
 
-        <div class="col-lg-2 col-sm-3 col-xs-12">
+        <div class="col-md-3 col-sm-4 col-xs-12">
           <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="300ms">
-            <div class="img-wrapper">
-              <img src="images/portfolio/item-2.jpg" class="img-responsive" alt="this is a title" />
-              <a target="_blank" href="single-portfolio.html">
+            <div class="img-wrapper" style = "box-shadow: 0px 10px 12px grey;">
+              <img src="D:\Web-project\images\categories\romance.jpg" class="img-responsive" alt="this is a title" style = "width : 450px ; height :185px;"/>
+              <a target="_blank" href="single-portfolio.html"></a>
                 <div class="overlay">
                   <span class="slide"> Romance</span>
                 </div>
@@ -265,10 +265,10 @@ Portfolio Section Start
             </div>
           </figure>
         </div>
-        <div class="col-lg-2 col-sm-3 col-xs-12">
+        <div class=" col-md-3 col-sm-4 col-xs-12">
           <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="300ms">
-            <div class="img-wrapper">
-              <img src="images/portfolio/item-3.jpg" class="img-responsive" alt="" />
+            <div class="img-wrapper" style = "box-shadow: 0px 10px 12px grey;">
+              <img src="D:\Web-project\images\categories\mystery.jpg" class="img-responsive" alt="" style = "width : 450px ; height :185px;"/>
               <a target="_blank" href="single-portfolio.html">
                 <div class="overlay">
                   <span class="slide"> Mystery & thriller</span>
@@ -277,10 +277,10 @@ Portfolio Section Start
             </div>
           </figure>
         </div>
-        <div class="col-lg-2 col-sm-3 col-xs-12">
-          <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="600ms">
-            <div class="img-wrapper">
-              <img src="images/portfolio/item-4.jpg" class="img-responsive" alt="" />
+        <div class="col-md-3 col-sm-4 col-xs-12">
+          <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="300ms">
+            <div class="img-wrapper" style = "box-shadow: 0px 10px 12px grey;">
+              <img src="D:\Web-project\images\categories\Fantasy.jpg" class="img-responsive" alt="" style = "width : 450px ; height :185px;"/>
               <a target="_blank" href="single-portfolio.html">
                 <div class="overlay">
                   <span class="slide"> Fantasy</span>
@@ -289,10 +289,10 @@ Portfolio Section Start
             </div>
           </figure>
         </div>
-        <div class="col-lg-2 col-sm-3 col-xs-12">
-          <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="900ms">
-            <div class="img-wrapper">
-              <img src="images/portfolio/item-5.jpg" class="img-responsive" alt="" />
+        <div class="col-md-3 col-sm-4 col-xs-12">
+          <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="600ms">
+            <div class="img-wrapper" style = "box-shadow: 0px 10px 12px grey;">
+              <img src="D:\Web-project\images\categories\children.jpg" class="img-responsive" alt="" style = "width : 450px ; height :185px;"/>
               <a target="_blank" href="single-portfolio.html">
                 <div class="overlay">
                   <span class="slide"> Children </span>
@@ -301,10 +301,10 @@ Portfolio Section Start
             </div>
           </figure>
         </div>
-        <div class="col-lg-2 col-sm-3 col-xs-12">
-          <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="1200ms">
-            <div class="img-wrapper">
-              <img src="images/portfolio/item-6.jpg" class="img-responsive" alt="" />
+        <div class="col-md-3 col-sm-4 col-xs-12">
+          <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="600ms">
+            <div class="img-wrapper" style = "box-shadow: 0px 10px 12px grey;">
+              <img src="D:\Web-project\images\categories\Science.jpg" class="img-responsive" alt="" style = "width : 450px ; height :185px;"/>
               <a target="_blank" href="single-portfolio.html">
                 <div class="overlay">
                   <span class="slide"> Science Fiction</span>
@@ -315,10 +315,10 @@ Portfolio Section Start
         </div>
 
 
-        <div class="col-lg-2 col-sm-3 col-xs-12">
-          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="0ms">
-            <div class="img-wrapper">
-              <img src="images/portfolio/item-1.jpg" class="img-responsive" alt="this is a title" />
+        <div class="col-md-3 col-sm-4 col-xs-12">
+          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="600ms">
+            <div class="img-wrapper" style = "box-shadow: 0px 10px 12px grey;">
+              <img src="D:\Web-project\images\categories\History.jpg" class="img-responsive" alt="this is a title" style = "width : 450px ; height :185px;"/>
               <a target="_blank" href="single-portfolio.html">
                 <div class="overlay">
                   <span class="slide"> Bios & History</span>
@@ -330,10 +330,10 @@ Portfolio Section Start
 
 
 
-        <div class="col-lg-2 col-sm-3 col-xs-12">
-          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="0ms">
-            <div class="img-wrapper">
-              <img src="images/portfolio/item-1.jpg" class="img-responsive" alt="this is a title" />
+        <div class="col-md-3 col-sm-4 col-xs-12">
+          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="600ms">
+            <div class="img-wrapper" style = "box-shadow: 0px 10px 12px grey;">
+              <img src="D:\Web-project\images\categories\horror.jpg" class="img-responsive" alt="this is a title" style = "width : 450px ; height :185px;" />
               <a target="_blank" href="single-portfolio.html">
                 <div class="overlay">
                   <span class="slide"> Horror</span>
@@ -345,10 +345,10 @@ Portfolio Section Start
 
 
 
-        <div class="col-lg-2 col-sm-3 col-xs-12">
-          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="0ms">
-            <div class="img-wrapper">
-              <img src="images/portfolio/item-1.jpg" class="img-responsive" alt="this is a title" />
+        <div class="col-md-3 col-sm-4 col-xs-12">
+          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="900ms">
+            <div class="img-wrapper" style = "box-shadow: 0px 10px 12px grey;">
+              <img src="D:\Web-project\images\categories\non-fiction.jpg" class="img-responsive" alt="this is a title" style = "width : 450px ; height :185px;" />
               <a target="_blank" href="single-portfolio.html">
                 <div class="overlay">
                   <span class="slide"> Non-fiction</span>
@@ -359,10 +359,10 @@ Portfolio Section Start
         </div>
 
 
-        <div class="col-lg-2 col-sm-3 col-xs-12">
-          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="0ms">
-            <div class="img-wrapper">
-              <img src="images/portfolio/item-1.jpg" class="img-responsive" alt="this is a title" />
+        <div class="col-md-3 col-sm-4 col-xs-12">
+          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="900ms">
+            <div class="img-wrapper" style = "box-shadow: 0px 10px 12px grey;">
+              <img src="D:\Web-project\images\categories\computers.jpg" class="img-responsive" alt="this is a title" style = "width : 450px ; height :185px;" />
               <a target="_blank" href="single-portfolio.html">
                 <div class="overlay">
                   <span class="slide"> Computers</span>
@@ -373,10 +373,10 @@ Portfolio Section Start
         </div>
 
 
-        <div class="col-lg-2 col-sm-3 col-xs-12">
-          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="0ms">
-            <div class="img-wrapper">
-              <img src="images/portfolio/item-1.jpg" class="img-responsive" alt="this is a title" />
+        <div class="col-md-3 col-sm-4 col-xs-12">
+          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="900ms">
+            <div class="img-wrapper" style = "box-shadow: 0px 10px 12px grey;">
+              <img src="D:\Web-project\images\categories\drama.jpg"class="img-responsive" alt="this is a title" style = "width : 450px ; height :185px;"/>
               <a target="_blank" href="single-portfolio.html">
                 <div class="overlay">
                   <span class="slide"> Drama</span>
@@ -387,10 +387,10 @@ Portfolio Section Start
         </div>
 
 
-        <div class="col-lg-2 col-sm-3 col-xs-12">
-          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="0ms">
-            <div class="img-wrapper">
-              <img src="images/portfolio/item-1.jpg" class="img-responsive" alt="this is a title" />
+        <div class="col-md-3 col-sm-4 col-xs-12">
+          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="900ms">
+            <div class="img-wrapper" style = "box-shadow: 0px 10px 12px grey;">
+              <img src="D:\Web-project\images\categories\criticism.jpg" class="img-responsive" alt="this is a title" style = "width : 450px ; height :185px;"/>
               <a target="_blank" href="single-portfolio.html">
                 <div class="overlay">
                   <span class="slide"> Criticism</span>
@@ -401,10 +401,10 @@ Portfolio Section Start
         </div>
 
 
-        <div class="col-lg-2 col-sm-3 col-xs-12">
-          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="0ms">
-            <div class="img-wrapper">
-              <img src="images/portfolio/item-1.jpg" class="img-responsive" alt="this is a title" />
+        <div class="col-md-3 col-sm-4 col-xs-12">
+          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="1200ms">
+            <div class="img-wrapper" style = "box-shadow: 0px 10px 12px grey;">
+              <img src="D:\Web-project\images\categories\cooking.jpg" class="img-responsive" alt="this is a title" style = "width : 450px ; height :185px;"/>
               <a target="_blank" href="single-portfolio.html">
                 <div class="overlay">
                   <span class="slide"> Cooking </span>
@@ -415,10 +415,10 @@ Portfolio Section Start
         </div>
 
 
-        <div class="col-lg-2 col-sm-3 col-xs-12">
-          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="0ms">
-            <div class="img-wrapper">
-              <img src="images/portfolio/item-1.jpg" class="img-responsive" alt="this is a title" />
+        <div class="col-md-3 col-sm-4 col-xs-12">
+          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="1200ms">
+            <div class="img-wrapper" style = "box-shadow: 0px 10px 12px grey;">
+              <img src="D:\Web-project\images\categories\business.jpg" class="img-responsive" alt="this is a title" style = "width : 450px ; height :185px;"/>
               <a target="_blank" href="single-portfolio.html">
                 <div class="overlay">
                   <span class="slide"> Business</span>
@@ -429,10 +429,10 @@ Portfolio Section Start
         </div>
 
 
-        <div class="col-lg-2 col-sm-3 col-xs-12">
-          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="0ms">
-            <div class="img-wrapper">
-              <img src="images/portfolio/item-1.jpg" class="img-responsive" alt="this is a title" />
+        <div class="col-md-3 col-sm-4 col-xs-12">
+          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="1200ms">
+            <div class="img-wrapper" style = "box-shadow: 0px 10px 12px grey;">
+              <img src="D:\Web-project\images\categories\biography.jpg" class="img-responsive" alt="this is a title" style = "width : 450px ; height :185px;"/>
               <a target="_blank" href="single-portfolio.html">
                 <div class="overlay">
                   <span class="slide"> Biography </span>
@@ -443,10 +443,10 @@ Portfolio Section Start
         </div>
 
 
-        <div class="col-lg-2 col-sm-3 col-xs-12">
-          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="0ms">
-            <div class="img-wrapper">
-              <img src="images/portfolio/item-1.jpg" class="img-responsive" alt="this is a title" />
+        <div class="col-md-3 col-sm-4 col-xs-12">
+          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="1200ms">
+            <div class="img-wrapper" style = "box-shadow: 0px 10px 12px grey;">
+              <img src="D:\Web-project\images\categories\health.jpg" class="img-responsive" alt="this is a title" style = "width : 450px ; height :185px;"/>
               <a target="_blank" href="single-portfolio.html">
                 <div class="overlay">
                   <span class="slide"> Health</span>
@@ -457,10 +457,10 @@ Portfolio Section Start
         </div>
 
 
-        <div class="col-lg-2 col-sm-3 col-xs-12">
-          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="0ms">
-            <div class="img-wrapper">
-              <img src="images/portfolio/item-1.jpg" class="img-responsive" alt="this is a title" />
+        <div class="col-md-3 col-sm-4 col-xs-12">
+          <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="1500ms">
+           <div class="img-wrapper" style = "box-shadow: 0px 10px 12px grey;">
+              <img src="D:\Web-project\images\categories\humor.jpg" class="img-responsive" alt="this is a title" style = "width : 450px ; height :185px;" />
               <a target="_blank" href="single-portfolio.html">
                 <div class="overlay">
                   <span class="slide"> Humor </span>
